--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-28  Laurent Dhima  <laurenti@alblinux.net>
+
+	* sq.po: Updated Albanian translation.
+
 2004-07-21  Guntupalli Karunakar  <karunakar@freedomink.org>
 
         * hi.po: Updated Hindi translation.
