--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-07-30 Kartik Mistry 	<kartik_m@magnet-i.com>
+
+	* gu.po: Updated Gujarati translation.
+
 2004-07-21  Guntupalli Karunakar  <karunakar@freedomink.org>
 
         * hi.po: Updated Hindi translation.
