--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-03  Shaun McCance  <shaunm@gnome.org>
+
+	* stylesheets/l10n.xml.in:
+	- Don't use entities, since intltool borks them
+
 2004-06-01  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-io-channel.c:
