--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-03  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
 2004-08-03  Alexander Winston  <alexander.winston@comcast.net>
 
 	* POTFILES.in: Added declaration of character encoding scheme.
