--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,4 +1,8 @@
-2004-07-30 Kartik Mistry 	<kartik_m@magnet-i.com>
+2004-08-03  Christian Rose  <menthos@menthos.com>
+
+	* sv.po: Updated Swedish translation.
+
+2004-07-30  Kartik Mistry  <kartik_m@magnet-i.com>
 
 	* gu.po: Updated Gujarati translation.
 
