--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-05  Pauli Virtanen  <pauli.virtanen@hut.fi>
+
+	* fi.po: Fixes to the Finnish translation.
+
 2004-08-03  Alexander Winston  <alexander.winston@comcast.net>
 
 	* en_CA.po: Updated Canadian English translation.
