--- a/po/fi.po
+++ b/po/fi.po
@@ -1,23 +1,26 @@
-# translation of yelp.HEAD.fi.po to Finnish
 # Finnish translation of Yelp
 # Copyright (C) 2001, 2002, 2003,2004 Free Software Foundation, Inc.
 # Suomennos: http://gnome-fi.sourceforge.net/
 # Henri Mannerberg <email-not@available.invalid>, 2002-2003.
-# Lauri Nurmi <lanurmi@iki.fi>, 2003,2004.
+# Lauri Nurmi <lanurmi@iki.fi>, 2003, 2004.
+# Pauli Virtanen <pauli.virtanen@hut.fi>, 2004.
 #
+# See http://www.cs.tut.fi/~jkorpela/suomi/lain.html on translation of
+# the quotation marks.
+#
+# Note http://mail.gnome.org/archives/gnome-i18n/2004-August/msg00032.html that
+# recommends the quotation marks be written explicitly, not as entities.
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2004-04-20 17:58-0500\n"
-"PO-Revision-Date: 2004-03-04 21:48+0200\n"
-"Last-Translator: Lauri Nurmi <lanurmi@iki.fi>\n"
-"Language-Team: Gnome Finnish Translation Team <virheet@gnome-fi."
-"org>sourceforge.net>\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-08-05 12:58+0200\n"
+"PO-Revision-Date: 2004-08-05 23:22+0300\n"
+"Last-Translator: Pauli Virtanen <pauli.virtanen@hut.fi>\n"
+"Language-Team: Gnome Finnish Translation Team <virheet@gnome-fi.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
-"X-Generator: KBabel 1.0\n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -139,25 +142,25 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Yelp-tehdas"
 
-#: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
+#: src/yelp-db-pager.c:438 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
 msgstr "href-määrettä ei löytynyt kohteesta yelp:document"
 
-#: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
+#: src/yelp-db-pager.c:453 src/yelp-man-pager.c:316
 msgid "Out of memory"
 msgstr "Muisti lopussa"
 
-#: src/yelp-db-pager.c:638 src/yelp-man-pager.c:370
+#: src/yelp-db-pager.c:641 src/yelp-man-pager.c:370
 msgid "Titlepage"
 msgstr "Nimiösivu"
 
-#: src/yelp-db-pager.c:640 stylesheets/l10n.xml.in.h:30
-#: src/yelp-man-pager.c:372
+#: src/yelp-db-pager.c:643 src/yelp-man-pager.c:372
+#: stylesheets/l10n.xml.in.h:30
 msgid "Contents"
 msgstr "Sisältö"
 
-#: src/yelp-db-pager.c:658 stylesheets/l10n.xml.in.h:69
-#: src/yelp-man-pager.c:390
+#: src/yelp-db-pager.c:661 src/yelp-man-pager.c:390
+#: stylesheets/l10n.xml.in.h:69
 msgid "Unknown"
 msgstr "Tuntematon"
 
@@ -350,11 +353,11 @@ msgstr "/Ohje/_Tietoja"
 
 #: src/yelp-window.c:352
 msgid "Help Browser"
-msgstr "Ohje-selain"
+msgstr "Ohjeselain"
 
 #: src/yelp-window.c:570 stylesheets/l10n.xml.in.h:61
 msgid "Section"
-msgstr "Sisällys"
+msgstr "Kappale"
 
 #: src/yelp-window.c:625
 msgid "Back"
@@ -386,7 +389,7 @@ msgstr "Ladataan..."
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:1303
+#: src/yelp-window.c:1304
 msgid "translator_credits"
 msgstr ""
 "Lauri Nurmi, 2003\n"
@@ -394,25 +397,29 @@ msgstr ""
 "\n"
 "http://gnome-fi.org/"
 
-#: src/yelp-window.c:1309
+#: src/yelp-window.c:1310
 msgid "A Help Browser for GNOME"
 msgstr "Gnomen ohje-selain"
 
+# From l10n.xml: LEFT SINGLE QUOTATION MARK
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr "&#8216;"
+msgstr "’"
 
+# From l10n.xml: RIGHT SINGLE QUOTATION MARK
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr "&#8217;"
+msgstr "’"
 
+# From l10n.xml: LEFT DOUBLE QUOTATION MARK
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr "&#8220;"
+msgstr "”"
 
+# From l10n.xml: RIGHT DOUBLE QUOTATION MARK
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr "&#8221;"
+msgstr "”"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
@@ -456,7 +463,7 @@ msgstr "Tietoja tästä viitteestä"
 
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Section"
-msgstr "Tietoja tästä osuudesta"
+msgstr "Tietoja tästä kappaleesta"
 
 #: stylesheets/l10n.xml.in.h:16
 msgid "About This Set"
@@ -620,7 +627,7 @@ msgstr "Viitemerkintä"
 
 #: stylesheets/l10n.xml.in.h:58
 msgid "Reference Section"
-msgstr "Viiteosuus"
+msgstr "Viitekappale"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
