Fixes to the Finnish translation.
* fi.po: Fixes to the Finnish translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-05  Pauli Virtanen  <pauli.virtanen@hut.fi>
+
+	* fi.po: Fixes to the Finnish translation.
+
 2004-08-03  Estêvão Samuel Procópio  <tevaum@cvs.gnome.org>
 
 	* pt_BR.po: Updated Brazilian Portuguese translation.
