--- a/po/fi.po
+++ b/po/fi.po
@@ -15,7 +15,7 @@ msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-05 12:58+0200\n"
-"PO-Revision-Date: 2004-08-05 23:22+0300\n"
+"PO-Revision-Date: 2004-08-06 00:16+0300\n"
 "Last-Translator: Pauli Virtanen <pauli.virtanen@hut.fi>\n"
 "Language-Team: Gnome Finnish Translation Team <virheet@gnome-fi.org>\n"
 "MIME-Version: 1.0\n"
@@ -357,7 +357,7 @@ msgstr "Ohjeselain"
 
 #: src/yelp-window.c:570 stylesheets/l10n.xml.in.h:61
 msgid "Section"
-msgstr "Kappale"
+msgstr "Luku"
 
 #: src/yelp-window.c:625
 msgid "Back"
@@ -463,7 +463,7 @@ msgstr "Tietoja tästä viitteestä"
 
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Section"
-msgstr "Tietoja tästä kappaleesta"
+msgstr "Tietoja tästä luvusta"
 
 #: stylesheets/l10n.xml.in.h:16
 msgid "About This Set"
@@ -627,7 +627,7 @@ msgstr "Viitemerkintä"
 
 #: stylesheets/l10n.xml.in.h:58
 msgid "Reference Section"
-msgstr "Viitekappale"
+msgstr "Viiteluku"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
