More fixes to the Finnish translation.
* fi.po: More fixes to the Finnish translation.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,9 @@
 2004-08-05  Pauli Virtanen  <pauli.virtanen@hut.fi>
 
+	* fi.po: More fixes to the Finnish translation.
+
+2004-08-05  Pauli Virtanen  <pauli.virtanen@hut.fi>
+
 	* fi.po: Fixes to the Finnish translation.
 
 2004-08-03  Alexander Winston  <alexander.winston@comcast.net>
