--- a/po/gu.po
+++ b/po/gu.po
@@ -1,114 +1,105 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR Free Software Foundation, Inc.
+# translation of yelp.gnome-2-6.gu.po to Gujarati
+# Copyright (C) 2004 Free Software Foundation, Inc.
 # MagNet <magnet@magnet-i.com>, 2004.
+# Ankit Patel <ankit@redhat.com>, 2004.
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp-2.6\n"
-"POT-Creation-Date: 2004-04-20 17:58-0500\n"
-"PO-Revision-Date: 2004-02-29 20:47+0530\n"
-"Last-Translator: Nirav, Ankit, Ankur, Atit, Bhavin, Kartik, Khushbu, Sweta. "
+"Project-Id-Version: yelp.gnome-2-6.gu\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-08-09 04:21+0200\n"
+"PO-Revision-Date: 2004-08-09 15:24+0530\n"
+"Last-Translator: Ankit Patel <ankit@redhat.com>\n"
 "<magnet@magnet-i.com>\n"
-"Language-Team: MagNet <magnet@magnet-i.com>\n"
+"Language-Team: Gujarati\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
+"X-Generator: KBabel 1.3.1\n"
+"Plural-Forms: Plural-Forms: nplurals=2; plural=(n!=1);\n\n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "કાર્યક્રમો"
+msgstr "એપ્લેટો"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
 msgstr "કાર્યક્રમો"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "જીનોમ - ડૅસ્કટોપ"
+msgstr "ડૅસ્કટોપ"
 
 #: data/toc.xml.in.h:4 src/yelp-man.c:434
 msgid "Development"
 msgstr "વિકાસ"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "વિકાસ"
+msgstr "વિકાસ પર્યાવરણો"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "વિકાસ"
+msgstr "વિકાસના સાધનો"
 
 #: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
-#, fuzzy
 msgid "Editors"
-msgstr "/_Edit"
+msgstr "સંપાદકો"
 
 #: data/toc.xml.in.h:8
-#, fuzzy
 msgid "Education Applications"
-msgstr "કાર્યક્રમો"
+msgstr "ભણતરના કાર્યક્રમો"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "રમતો અને મનોરંજન"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "સામાન્ય"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
 msgstr "મદદની વિષયસૂચી"
 
 #: data/toc.xml.in.h:12
-#, fuzzy
 msgid "Internet Applications"
-msgstr "કાર્યક્રમો"
+msgstr "ઈન્ટરનેટ કાર્યક્રમો"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Kernels"
-msgstr "કર્નલની દરવખતની ક્રિયાઓ"
+msgstr "કર્નલો"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "કાર્યક્રમો"
+msgstr "મલ્ટીમિડીયા કાર્યક્રમો"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "ઓફિસ અને ઉત્પાદક કાર્યક્રમો"
 
 #: data/toc.xml.in.h:17
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "કાર્યક્રમો"
+msgstr "વૈજ્ઞાનિક કાર્યક્રમો"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr ""
+msgstr "સુરક્ષાઓ"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "સિસ્ટમ કાૅલ"
+msgstr "સિસ્ટમ"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr ""
+msgstr "ઉપયોગિતાઓ"
 
 #: data/toc.xml.in.h:21
-#, fuzzy
 msgid "X Applications"
-msgstr "કાર્યક્રમો"
+msgstr "X કાર્યક્રમો"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -116,15 +107,15 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "કેસ પ્રત્યે સંવેદનશીલ (_a)"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "શોધો"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "શોધો (_F): "
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
@@ -136,7 +127,7 @@ msgstr "પહેલાનું (_P)"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
-msgstr ""
+msgstr "ની ફરતે લપેટો (_W)"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -146,48 +137,47 @@ msgstr "યલ્પ"
 msgid "Yelp Factory"
 msgstr "યલ્પ કારખાનું"
 
-#: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
+#: src/yelp-db-pager.c:438 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "કોઈ href લક્ષણ મદદ:દસ્તાવેજમાં મળ્યું નથી"
 
-#: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
+#: src/yelp-db-pager.c:453 src/yelp-man-pager.c:316
 msgid "Out of memory"
-msgstr ""
+msgstr "મેમરીની બહાર"
 
-#: src/yelp-db-pager.c:638 src/yelp-man-pager.c:370
+#: src/yelp-db-pager.c:641 src/yelp-man-pager.c:370
 msgid "Titlepage"
-msgstr ""
+msgstr "શીર્ષકપાનું"
 
-#: src/yelp-db-pager.c:640 stylesheets/l10n.xml.in.h:30
-#: src/yelp-man-pager.c:372
-#, fuzzy
+#: src/yelp-db-pager.c:643 src/yelp-man-pager.c:372
+#: stylesheets/l10n.xml.in.h:30
 msgid "Contents"
-msgstr "મદદની વિષયસૂચી"
+msgstr "વિષયસૂચી"
 
-#: src/yelp-db-pager.c:658 stylesheets/l10n.xml.in.h:69
-#: src/yelp-man-pager.c:390
+#: src/yelp-db-pager.c:661 src/yelp-man-pager.c:390
+#: stylesheets/l10n.xml.in.h:69
 msgid "Unknown"
-msgstr ""
+msgstr "અજ્ઞાત"
 
 #: src/yelp-error.c:46
 msgid "The selected document could not be opened"
-msgstr ""
+msgstr "પસંદ કરેલ દસ્તાવેજ ખોલી શકાયું નહિં"
 
 #: src/yelp-error.c:52
 msgid "The selected page could not be found in this document."
-msgstr ""
+msgstr "પસંદ કરેલ દસ્તાવેજ આ દસ્તાવેજમાં ખોલી શકાયું નહિં."
 
 #: src/yelp-error.c:58
 msgid "The table of contents could not be read."
-msgstr ""
+msgstr "કોષ્ટકની વિષયસૂચી વાંચી શકાઈ નહિં."
 
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "DocBook SGML દસ્તાવેજો લાંબા સમય સુધી આધારભૂત નથી."
 
 #: src/yelp-error.c:70
 msgid "The selected file could not be read."
-msgstr ""
+msgstr "પસંદ કરેલ ફાઈલ વાંચી શકાઈ નહિં."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -264,22 +254,21 @@ msgid "System Administration"
 msgstr "સિસ્ટમ સંચાલક"
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "દસ્તાવેજો"
+msgstr "દસ્તાવેજ URI"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "દસ્તાવેજની URI પ્રક્રિયા થવા જઈ હતી"
 
 #: src/yelp-toc-pager.c:267
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "YelpTocPager: અટકણ ગણક ઋણ છે."
 
 #: src/yelp-toc-pager.c:487
-#, fuzzy, c-format
+#, c-format
 msgid "Could not load the OMF file '%s'."
-msgstr "યલ્પને સક્રિય કરી શકાતું નથી: '%s'"
+msgstr "OMF ફાઈલ '%s' લાવી શક્યા નહિં."
 
 #: src/yelp-toc-pager.c:884
 msgid "Categories"
@@ -306,19 +295,16 @@ msgid "/_Edit"
 msgstr "/_Edit"
 
 #: src/yelp-window.c:258
-#, fuzzy
 msgid "/Edit/_Find..."
-msgstr "/Edit/_Find in page..."
+msgstr "/ફેરફાર કરો/શોધો (_F)..."
 
 #: src/yelp-window.c:261
-#, fuzzy
 msgid "/Edit/Find Ne_xt"
-msgstr "/Edit/_Find again"
+msgstr "/ફેરફાર કરો/પછીનું શોધો (_x)"
 
 #: src/yelp-window.c:264
-#, fuzzy
 msgid "/Edit/Find Pre_vious"
-msgstr "/Edit/_Find again"
+msgstr "/ફેરફાર કરો/ફરી શોધો (_F)"
 
 #: src/yelp-window.c:268
 msgid "/_Go"
@@ -337,23 +323,20 @@ msgid "/Go/_Home"
 msgstr "/Go/_Home"
 
 #: src/yelp-window.c:278
-#, fuzzy
 msgid "/Go/"
-msgstr "/_Go"
+msgstr "/જાઓ/"
 
 #: src/yelp-window.c:279
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "પહેલાનું (_P)"
+msgstr "/જાઓ/પહેલાનું પાનું (_P)"
 
 #: src/yelp-window.c:282
 msgid "/Go/_Next Page"
-msgstr ""
+msgstr "/જાઓ/પછીનું પાનું (_N)"
 
 #: src/yelp-window.c:285
-#, fuzzy
 msgid "/Go/_Contents"
-msgstr "/Go/_Home"
+msgstr "/જાઓ/સમાવિષ્ટો (_C)"
 
 #: src/yelp-window.c:289
 msgid "/_Help"
@@ -401,7 +384,7 @@ msgstr "લાવી રહ્યા છે..."
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:1303
+#: src/yelp-window.c:1304
 msgid "translator_credits"
 msgstr ""
 "નીરવ <nirav@magnet-i.com>\n"
@@ -413,168 +396,165 @@ msgstr ""
 "ખુશ્બુ <khushbu_hi21@yahoo.co.in>\n"
 "શ્વેતા <sweta2782@yahoo.co.in>."
 
-#: src/yelp-window.c:1309
+#: src/yelp-window.c:1310
 msgid "A Help Browser for GNOME"
 msgstr "જીનોમ માટે મદદનું બ્રાઉઝર"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
-msgstr ""
+msgstr "આ લેખ વિશે"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Bibliography"
-msgstr ""
+msgstr "આ સંદર્ભગ્રંથ વિશે"
 
 #: stylesheets/l10n.xml.in.h:7
 msgid "About This Book"
-msgstr ""
+msgstr "આ પુસ્તક વિશે"
 
 #: stylesheets/l10n.xml.in.h:8
 msgid "About This Chapter"
-msgstr ""
+msgstr "આ પ્રકરણ વિશે"
 
 #: stylesheets/l10n.xml.in.h:9
 msgid "About This Entry"
-msgstr ""
+msgstr "આ પ્રવેશ વિશે"
 
 #: stylesheets/l10n.xml.in.h:10
 msgid "About This Glossary"
-msgstr ""
+msgstr "આ સાર વિશે"
 
 #: stylesheets/l10n.xml.in.h:11
 msgid "About This Index"
-msgstr ""
+msgstr "આ અનુક્રમ વિશે"
 
 #: stylesheets/l10n.xml.in.h:12
 msgid "About This Part"
-msgstr ""
+msgstr "આ ભાગ વિશે"
 
 #: stylesheets/l10n.xml.in.h:13
 msgid "About This Preface"
-msgstr ""
+msgstr "આ પ્રસ્તાવના વિશે"
 
 #: stylesheets/l10n.xml.in.h:14
 msgid "About This Reference"
-msgstr ""
+msgstr "આ સંદર્ભ વિશે"
 
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Section"
-msgstr ""
+msgstr "આ વિભાગ વિશે"
 
 #: stylesheets/l10n.xml.in.h:16
 msgid "About This Set"
-msgstr ""
+msgstr "આ ગણ વિશે"
 
 #: stylesheets/l10n.xml.in.h:17
-#, fuzzy
 msgid "Affiliation"
-msgstr "કાર્યક્રમો"
+msgstr "અફિલિએશન"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Appendix"
-msgstr ""
+msgstr "અનુક્રમણિકા"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Article"
-msgstr ""
+msgstr "લેખ"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Audience"
-msgstr ""
+msgstr "પ્રેક્ષકો"
 
 #: stylesheets/l10n.xml.in.h:21
 msgid "Author"
-msgstr ""
+msgstr "લેખક"
 
 #: stylesheets/l10n.xml.in.h:22
 msgid "Authors"
-msgstr ""
+msgstr "લેખકો"
 
 #: stylesheets/l10n.xml.in.h:23
 msgid "Bibliography"
-msgstr ""
+msgstr "સંદર્ભગ્રંથ"
 
 #: stylesheets/l10n.xml.in.h:24
 msgid "Book"
-msgstr ""
+msgstr "પુસ્તક"
 
 #: stylesheets/l10n.xml.in.h:25
 msgid "Caution"
-msgstr ""
+msgstr "બચો"
 
 #: stylesheets/l10n.xml.in.h:26
 msgid "Chapter"
-msgstr ""
+msgstr "પ્રકરણ"
 
 #: stylesheets/l10n.xml.in.h:27
 msgid "Collaborator"
-msgstr ""
+msgstr "સમજૂતી કરનાર"
 
 #: stylesheets/l10n.xml.in.h:28
 msgid "Collaborators"
-msgstr ""
+msgstr "સમજૂતી કરનારો"
 
 #: stylesheets/l10n.xml.in.h:29
 msgid "Colophon"
-msgstr ""
+msgstr "કોલોફોન"
 
 #: stylesheets/l10n.xml.in.h:31
 msgid "Copyright"
-msgstr ""
+msgstr "મુદ્રણાધિકાર"
 
 #: stylesheets/l10n.xml.in.h:32
 msgid "Copyrights"
-msgstr ""
+msgstr "મુદ્રણાધિકારો"
 
 #: stylesheets/l10n.xml.in.h:33
 msgid "Date"
-msgstr ""
+msgstr "તારીખ"
 
 #: stylesheets/l10n.xml.in.h:34
-#, fuzzy
 msgid "Dedication"
-msgstr "વિભાગ"
+msgstr "યાદગીરી"
 
 #: stylesheets/l10n.xml.in.h:35
-#, fuzzy
 msgid "Editor"
-msgstr "/_Edit"
+msgstr "સંપાદક"
 
 #: stylesheets/l10n.xml.in.h:37
 msgid "Email"
-msgstr ""
+msgstr "ઈ-મેઈલ"
 
 #: stylesheets/l10n.xml.in.h:38
 msgid "Example"
-msgstr ""
+msgstr "ઉદાહરણ"
 
 #: stylesheets/l10n.xml.in.h:39
 msgid "Figure"
-msgstr ""
+msgstr "આકૃતિ"
 
 #: stylesheets/l10n.xml.in.h:40
 msgid "Glossary"
-msgstr ""
+msgstr "સાર"
 
 #: stylesheets/l10n.xml.in.h:41
 msgid "Important"
-msgstr ""
+msgstr "મહત્વનું"
 
 #: stylesheets/l10n.xml.in.h:42
 msgid "Index"
@@ -582,109 +562,107 @@ msgstr "અનુક્રમણિકા"
 
 #: stylesheets/l10n.xml.in.h:43
 msgid "Legal Notice"
-msgstr ""
+msgstr "માન્ય સૂચન"
 
 #: stylesheets/l10n.xml.in.h:44
 msgid "Level"
-msgstr ""
+msgstr "સ્તર"
 
 #: stylesheets/l10n.xml.in.h:45
 msgid "Message Audience"
-msgstr ""
+msgstr "સંદેશા પ્રેક્ષક"
 
 #: stylesheets/l10n.xml.in.h:46
 msgid "Message Level"
-msgstr ""
+msgstr "સંદેશા સ્તર"
 
 #: stylesheets/l10n.xml.in.h:47
 msgid "Message Origin"
-msgstr ""
+msgstr "સંદેશાનું મૂળ"
 
 #: stylesheets/l10n.xml.in.h:48
 msgid "Note"
-msgstr ""
+msgstr "નોંધ"
 
 #: stylesheets/l10n.xml.in.h:49
 msgid "Origin"
-msgstr ""
+msgstr "મૂળ"
 
 #: stylesheets/l10n.xml.in.h:50
 msgid "Other Contributor"
-msgstr ""
+msgstr "બીજી ફાળો આપનાર"
 
 #: stylesheets/l10n.xml.in.h:51
 msgid "Other Contributors"
-msgstr ""
+msgstr "બીજા ફાળો આપનારો"
 
 #: stylesheets/l10n.xml.in.h:52
 msgid "Part"
-msgstr ""
+msgstr "ભાગ"
 
 #: stylesheets/l10n.xml.in.h:53
 msgid "Preface"
-msgstr ""
+msgstr "પ્રસ્તાવના"
 
 #: stylesheets/l10n.xml.in.h:54
 msgid "Publisher"
-msgstr ""
+msgstr "પ્રકાશક"
 
 #: stylesheets/l10n.xml.in.h:55
 msgid "Publishers"
-msgstr ""
+msgstr "પ્રકાશકો"
 
 #: stylesheets/l10n.xml.in.h:56
 msgid "Reference"
-msgstr ""
+msgstr "સંદર્ભ"
 
 #: stylesheets/l10n.xml.in.h:57
 msgid "Reference Entry"
-msgstr ""
+msgstr "સંદર્ભ પ્રવેશ"
 
 #: stylesheets/l10n.xml.in.h:58
 msgid "Reference Section"
-msgstr ""
+msgstr "સંદર્ભ વિભાગ"
 
 #: stylesheets/l10n.xml.in.h:59
 msgid "Release Information"
-msgstr ""
+msgstr "પ્રકાશન જાણકારી"
 
 #: stylesheets/l10n.xml.in.h:60
 msgid "Revision History"
-msgstr ""
+msgstr "પુનરાવર્તન ઈતિહાસ"
 
 #: stylesheets/l10n.xml.in.h:62
 msgid "See"
-msgstr ""
+msgstr "જુઓ"
 
 #: stylesheets/l10n.xml.in.h:63
 msgid "See Also"
-msgstr ""
+msgstr "પણ જુઓ"
 
 #: stylesheets/l10n.xml.in.h:64
-#, fuzzy
 msgid "Set Index"
-msgstr "અનુક્રમણિકા"
+msgstr "અનુક્રમ સુયોજિત કરો"
 
 #: stylesheets/l10n.xml.in.h:65
 msgid "Table"
-msgstr ""
+msgstr "કોષ્ટક"
 
 #: stylesheets/l10n.xml.in.h:66
-#, fuzzy
 msgid "Table of Contents"
-msgstr "મદદની વિષયસૂચી"
+msgstr "કોષ્ટકની વિષયસૂચી"
 
 #: stylesheets/l10n.xml.in.h:67
 msgid "Tip"
-msgstr ""
+msgstr "મદદ"
 
 #: stylesheets/l10n.xml.in.h:68
 msgid "Title"
-msgstr ""
+msgstr "શીર્ષક"
 
 #: stylesheets/l10n.xml.in.h:70
 msgid "Warning"
-msgstr ""
+msgstr "ચેતવણી"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -694,50 +672,3 @@ msgstr "જીનોમ સાથે મદદ લો"
 msgid "Help"
 msgstr "મદદ"
 
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>દસ્તાવેજ માં લખાણ શોધો:</b>"
-
-#~ msgid "Automatically _wrap around"
-#~ msgstr "આપોઆપ લપેટો (_w)"
-
-#~ msgid "Find text..."
-#~ msgstr "લખાણ શોધો..."
-
-#~ msgid "Match _entire word"
-#~ msgstr "આખો શબ્દ સરખાવો (_e)"
-
-#~ msgid "_Match upper/lower case"
-#~ msgstr "મોટા/નાના અક્ષર સરખાવો (_M)"
-
-#~ msgid "_Search for:"
-#~ msgstr "ના માટે શોધો: (_S)"
-
-#~ msgid "Additional documents"
-#~ msgstr "વધારાના દસ્તાવેજો"
-
-#~ msgid "Manual Pages"
-#~ msgstr "મદદપત્રિકાના પાના"
-
-#~ msgid "Info Pages"
-#~ msgstr "જાણકારી માટેના પાનાઓ"
-
-#~ msgid "Manual pages"
-#~ msgstr "મદદપત્રિકાના પાનાઓ"
-
-#~ msgid "GNOME is"
-#~ msgstr "જીનોમ એ"
-
-#~ msgid "Free Software"
-#~ msgstr "મફત સોફ્ટવેર"
-
-#~ msgid "(C)"
-#~ msgstr "(C)"
-
-#~ msgid "/Go/_Index"
-#~ msgstr "/Go/_Index"
-
-#~ msgid "The document '%s' does not exist"
-#~ msgstr "'%s' દસ્તાવેજ અસ્તિત્વમાં નથી"
-
-#~ msgid "Search in the index"
-#~ msgstr "અનુક્રમણિકામાં શોધો"
