Translation updated by Tino Meinen.
2004-08-09  Vincent van Adrighem  <adrighem@gnome.org>

	* nl.po: Translation updated by Tino Meinen.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-09  Vincent van Adrighem  <adrighem@gnome.org>
+
+	* nl.po: Translation updated by Tino Meinen.
+
 2004-08-05  Pauli Virtanen  <pauli.virtanen@hut.fi>
 
 	* fi.po: More fixes to the Finnish translation.
