--- a/po/fi.po
+++ b/po/fi.po
@@ -17,7 +17,7 @@ msgstr ""
 "POT-Creation-Date: 2004-08-05 12:58+0200\n"
 "PO-Revision-Date: 2004-08-06 00:16+0300\n"
 "Last-Translator: Pauli Virtanen <pauli.virtanen@hut.fi>\n"
-"Language-Team: Gnome Finnish Translation Team <virheet@gnome-fi.org>\n"
+"Language-Team: Finnish <gnome-fi-laatu@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
