*** empty log message ***

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-15  Gurban M. Tewekgeli  <gmtavakkoli@yahoo.com>
+
+	* po/tk.po: Added Turkmen translation.
+	* configure.in: Added "tk" to ALL_LINGUAS
+
 2004-08-10  Shaun McCance  <shaunm@gnome.org>
 
 	* src/yelp-history.c:
