--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-15  GurbanM. Tewekgeli  <gmtavakkoli@yahoo.com>
+
+	* tk.po: Added Turkmen translation.
+
 2004-08-09  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Tino Meinen.
