--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-16  Christian Rose  <menthos@menthos.com>
+
+	* configure.in: Added "bs" to ALL_LINGUAS.
+
 2004-08-15  Gurban M. Tewekgeli  <gmtavakkoli@yahoo.com>
 
 	* po/tk.po: Added Turkmen translation.
