--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-16  Christian Rose  <menthos@menthos.com>
+
+	* bs.po: Added Bosnian translation by
+	Kemal Sanjta <gomez@lugzdk.ba>.
+
 2004-08-15  GurbanM. Tewekgeli  <gmtavakkoli@yahoo.com>
 
 	* tk.po: Added Turkmen translation.
