--- a/po/gu.po
+++ b/po/gu.po
@@ -6,16 +6,17 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp.gnome-2-6.gu\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-09 04:21+0200\n"
-"PO-Revision-Date: 2004-08-09 15:24+0530\n"
+"POT-Creation-Date: 2004-08-18 12:21+0200\n"
+"PO-Revision-Date: 2004-08-20 14:41+0530\n"
 "Last-Translator: Ankit Patel <ankit@redhat.com>\n"
-"<magnet@magnet-i.com>\n"
 "Language-Team: Gujarati\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"<magnet@magnet-i.com>\n"
 "X-Generator: KBabel 1.3.1\n"
 "Plural-Forms: Plural-Forms: nplurals=2; plural=(n!=1);\n\n"
+"\n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -280,19 +281,19 @@ msgstr "દસ્તાવેજો"
 
 #: src/yelp-window.c:249
 msgid "/_File"
-msgstr "/_File"
+msgstr "/ફાઈલ (_F)"
 
 #: src/yelp-window.c:250
 msgid "/File/_New window"
-msgstr "/File/_New window"
+msgstr "/ફાઈલ/નવી વિન્ડો (_N)"
 
 #: src/yelp-window.c:253
 msgid "/File/_Close window"
-msgstr "/File/_Close window"
+msgstr "/ફાઈલ/વિન્ડો બંધ કરો (_C)"
 
 #: src/yelp-window.c:257
 msgid "/_Edit"
-msgstr "/_Edit"
+msgstr "/ફેરફાર કરો (_E)"
 
 #: src/yelp-window.c:258
 msgid "/Edit/_Find..."
@@ -308,19 +309,19 @@ msgstr "/ફેરફાર કરો/ફરી શોધો (_F)"
 
 #: src/yelp-window.c:268
 msgid "/_Go"
-msgstr "/_Go"
+msgstr "/જાઓ (_G)"
 
 #: src/yelp-window.c:269
 msgid "/Go/_Back"
-msgstr "/Go/_Back"
+msgstr "/જાઓ/પાછા (_B)"
 
 #: src/yelp-window.c:272
 msgid "/Go/_Forward"
-msgstr "/Go/_Forward"
+msgstr "/જાઓ/આગળ (_F)"
 
 #: src/yelp-window.c:275
 msgid "/Go/_Home"
-msgstr "/Go/_Home"
+msgstr "/જાઓ/ઘર (_H)"
 
 #: src/yelp-window.c:278
 msgid "/Go/"
@@ -340,11 +341,11 @@ msgstr "/જાઓ/સમાવિષ્ટો (_C)"
 
 #: src/yelp-window.c:289
 msgid "/_Help"
-msgstr "/_Help"
+msgstr "/મદદ (_H)"
 
 #: src/yelp-window.c:290
 msgid "/Help/_About"
-msgstr "/Help/_About"
+msgstr "/મદદ/વિશે (_A)"
 
 #: src/yelp-window.c:352
 msgid "Help Browser"
