Updated Albanian translation.
2004-08-20  Laurent Dhima  <laurenti@alblinux.net>

	* sq.po: Updated Albanian translation.

--- a/po/sq.po
+++ b/po/sq.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp.HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-18 04:21+0200\n"
+"POT-Creation-Date: 2004-08-19 12:19+0200\n"
 "PO-Revision-Date: 2004-02-23 10:12+0100\n"
 "Last-Translator: Laurent Dhima <laurenti@alblinux.net>\n"
 "Language-Team: Albanian <gnome-albanian-perkthyesit@lists.sourceforge.net>\n"
@@ -38,9 +38,10 @@ msgstr "Ambiente zhvillimi"
 msgid "Development Tools"
 msgstr "Instrumentë për zhvillim"
 
+#. GRUT modified this item
 #: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:36
 msgid "Editors"
-msgstr "Editorë"
+msgstr "Botuesit"
 
 #: data/toc.xml.in.h:8
 msgid "Education Applications"
@@ -66,7 +67,6 @@ msgstr "Programe në lidhje me internetin"
 msgid "KDE"
 msgstr "KDE"
 
-#. GRUT modified this item
 #: data/toc.xml.in.h:14
 msgid "Kernels"
 msgstr "Kernels"
