--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-24  Kjartan Maraas  <kmaraas@gnome.org>
+
+	* nb.po: Add this here too.
+
 2004-08-20  Laurent Dhima  <laurenti@alblinux.net>
 
 	* sq.po: Updated Albanian translation.
