--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-25  Gustavo Maciel Dias Vieira  <gustavo@sagui.org>
+
+	* pt_BR.po: Some consistency fixes.
+
 2004-08-24  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* nb.po: Add this here too.
