--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-08-28  Laszlo Dvornik  <dvornik@gnome.hu>
+
+	* hu.po: Updated Hungarian translation.
+
 2004-08-27  Iñaki Larrañaga  <dooteo@euskalgnu.org>
 
 	* eu.po: Updateed Basque translation.
