--- a/po/hu.po
+++ b/po/hu.po
@@ -1,25 +1,23 @@
-# 
 # Hungarian translation of yelp.
-# Copyright (C) 2002-2004 Free Software Foundation, Inc.
+# Copyright (C) 2002, 2003, 2004 Free Software Foundation, Inc.
+# This file is distributed under the same license as the yelp package.
 # Szabolcs Ban <shooby@gnome.hu>, 2002.
 # Emese Kovacs <emese@gnome.hu>, 2002.
-# Andras Timar <timar@gnome.hu>, 2002-2004.
-# Laszlo Dvornik <dvornikl@mailbox.hu>, 2004.
-# Gabor Kelemen <kg0021@stud.unideb.hu>, 2004.
+# Andras Timar <timar@gnome.hu>, 2002, 2003, 2004.
+# Laszlo Dvornik <dvornik@gnome.hu>, 2004.
+# Gabor Kelemen <kelemeng@dvornik.hu>, 2004.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-04-15 15:34+0200\n"
-"PO-Revision-Date: 2004-04-24 08:37+0200\n"
-"Last-Translator: Gabor Kelemen <kg0021@stud.unideb.hu>\n"
+"POT-Creation-Date: 2004-08-27 04:16+0200\n"
+"PO-Revision-Date: 2004-08-27 11:59+0200\n"
+"Last-Translator: Laszlo Dvornik <dvornik@gnome.hu>\n"
 "Language-Team: Hungarian <gnome@gnome.hu>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.3.1\n"
-"Plural-Forms:  nplurals=1; plural=0;\n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -141,25 +139,25 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Yelp Factory"
 
-#: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
+#: src/yelp-db-pager.c:438 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
-msgstr "Nem található href attribútum a yelp: dokumentumon"
+msgstr "Nem található href attribútum a yelp:dokumentumon"
 
-#: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
+#: src/yelp-db-pager.c:453 src/yelp-man-pager.c:316
 msgid "Out of memory"
 msgstr "Nincs több memória"
 
-#: src/yelp-db-pager.c:638 src/yelp-man-pager.c:370
+#: src/yelp-db-pager.c:641 src/yelp-man-pager.c:370
 msgid "Titlepage"
 msgstr "Címoldal"
 
-#: src/yelp-db-pager.c:640 stylesheets/l10n.xml.in.h:30
-#: src/yelp-man-pager.c:372
+#: src/yelp-db-pager.c:643 src/yelp-man-pager.c:372
+#: stylesheets/l10n.xml.in.h:30
 msgid "Contents"
 msgstr "Tartalom"
 
-#: src/yelp-db-pager.c:658 stylesheets/l10n.xml.in.h:69
-#: src/yelp-man-pager.c:390
+#: src/yelp-db-pager.c:661 src/yelp-man-pager.c:390
+#: stylesheets/l10n.xml.in.h:69
 msgid "Unknown"
 msgstr "Ismeretlen"
 
@@ -190,11 +188,11 @@ msgstr "A gyorsítótár könyvtárának megadása"
 #: src/yelp-main.c:128
 #, c-format
 msgid "Could not activate Yelp: '%s'"
-msgstr "A Yelp aktiválása sikertelen: '%s'"
+msgstr "Nem lehet aktiválni a Yelp-et: '%s'"
 
 #: src/yelp-main.c:147
 msgid "Could not open new window."
-msgstr "Új ablak nyitása sikertelen."
+msgstr "Nem lehet új ablakot megnyitni."
 
 #: src/yelp-man.c:296 src/yelp-man.c:317 src/yelp-man.c:353 src/yelp-man.c:385
 #: src/yelp-man.c:401 src/yelp-man.c:412
@@ -231,7 +229,7 @@ msgstr "Rendszerhívások"
 
 #: src/yelp-man.c:369
 msgid "Library Functions"
-msgstr "Könyvtári függvények"
+msgstr "Programkönyvtári függvények"
 
 #: src/yelp-man.c:374
 msgid "Kernel Routines"
@@ -265,20 +263,20 @@ msgstr "Dokumentum URI"
 msgid "The URI of the document to be processed"
 msgstr "A feldolgozandó dokumentum URI-ja"
 
-#: src/yelp-toc-pager.c:266
+#: src/yelp-toc-pager.c:267
 msgid "YelpTocPager: Pause count is negative."
 msgstr "YelpTocPager: Szünetek száma negatív."
 
-#: src/yelp-toc-pager.c:486
+#: src/yelp-toc-pager.c:487
 #, c-format
 msgid "Could not load the OMF file '%s'."
-msgstr "Az OMF-file betöltése sikertelen: '%s'"
+msgstr "Nem lehet betölteni a(z) '%s' OMF-fájlt."
 
-#: src/yelp-toc-pager.c:883
+#: src/yelp-toc-pager.c:884
 msgid "Categories"
 msgstr "Kategóriák"
 
-#: src/yelp-toc-pager.c:897
+#: src/yelp-toc-pager.c:898
 msgid "Documents"
 msgstr "Dokumentumok"
 
@@ -388,13 +386,16 @@ msgstr "Betöltés..."
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:1300
+#: src/yelp-window.c:1304
 msgid "translator_credits"
 msgstr ""
 "Bán Szabolcs <shooby@gnome.hu>\n"
+"Dvornik László <dvornik@gnome.hu>\n"
+"Kelemen Gábor <kelemeng@gnome.hu>\n"
+"Kovács Emese <emese@gnome.hu>\n"
 "Tímár András <timar@gnome.hu>"
 
-#: src/yelp-window.c:1306
+#: src/yelp-window.c:1310
 msgid "A Help Browser for GNOME"
 msgstr "A GNOME súgóböngészője"
 
@@ -436,7 +437,7 @@ msgstr "A bejegyzés névjegye"
 
 #: stylesheets/l10n.xml.in.h:10
 msgid "About This Glossary"
-msgstr "A szójegyzék névjegye"
+msgstr "A kifejezésgyűjtemény névjegye"
 
 #: stylesheets/l10n.xml.in.h:11
 msgid "About This Index"
@@ -660,7 +661,7 @@ msgstr "Cím"
 
 #: stylesheets/l10n.xml.in.h:70
 msgid "Warning"
-msgstr "Figyelem"
+msgstr "Figyelmeztetés"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -669,4 +670,3 @@ msgstr "A GNOME súgója"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Súgó"
-
