--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,26 @@
+Changes in 2.6.2:
+-----------------
+* Fixed various leaks and crashes:
+    #140663  #140757  #139739  #142081  #140595  #140630
+* Updated translations:
+  bg     (Vladimir "Kaladan" Petkov)
+  bs     (Kemal Sanjta)
+  en_CA  (Alexander Winston)
+  eu     (Iñaki Larrañaga)
+  fi     (Pauli Virtanen)
+  fr     (Christophe Merlet)
+  hi     (Guntupalli Karunakar)
+  hu     (Laszlo Dvornik)
+  ka     (Pablo Saratxaga)
+  mi     (John C Barstow)
+  nb     (Kjartan Marass)
+  nl     (Tino Meinen)
+  pt_BR  (Gustavo Maciel Dias Vieira)
+  sq     (Laurent Dhima)
+  sv     (Christian Rose)
+  tg     (Pablo Saratxaga)
+  tk     (Gurban M. Tewekgeli)
+
 Changes in 2.6.1:
 -----------------
 * Numerous leaks identified and fixed:
