--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2004-08-30  Shaun McCance  <shaunm@gnome.org>
+
+	* configure.in:
+	- Version 2.6.2
+
+	* po/*.po:
+	- Stuff distcheck likes to do
+
 2004-08-24  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* configure.in: Add «nb» to ALL_LINGUAS.
