--- a/po/gu.po
+++ b/po/gu.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp.gnome-2-6.gu\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-18 12:21+0200\n"
+"POT-Creation-Date: 2004-08-30 23:35-0500\n"
 "PO-Revision-Date: 2004-08-20 14:41+0530\n"
 "Last-Translator: Ankit Patel <ankit@redhat.com>\n"
 "Language-Team: Gujarati\n"
@@ -15,7 +15,8 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "<magnet@magnet-i.com>\n"
 "X-Generator: KBabel 1.3.1\n"
-"Plural-Forms: Plural-Forms: nplurals=2; plural=(n!=1);\n\n"
+"Plural-Forms: Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"\n"
 "\n"
 
 #: data/toc.xml.in.h:1
@@ -672,4 +673,3 @@ msgstr "જીનોમ સાથે મદદ લો"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "મદદ"
-
