--- a/po/pa.po
+++ b/po/pa.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: yelp.gnome-2-6.pa\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-06 04:21+0200\n"
+"POT-Creation-Date: 2004-08-30 23:35-0500\n"
 "PO-Revision-Date: 2004-08-06 11:18+0530\n"
 "Last-Translator: Amanpreet Singh Alam <aalam@redhat.com>\n"
 "Language-Team: Punjabi <pa@li.org>\n"
@@ -16,7 +16,8 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.3.1\n"
-"Plural-Forms: Plural-Forms: nplurals=2; plural=(n != 1);\n\n"
+"Plural-Forms: Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"\n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -388,9 +389,9 @@ msgstr "ਲੋਡ ਹੋ ਰਿਹਾ ਹੈ ..."
 #: src/yelp-window.c:1304
 msgid "translator_credits"
 msgstr ""
-"ਅਮਨਪ੍ਰੀਤ ਸਿੰਘ ਆਲਮ <amanlinux@netscape.net> "
-"ਗੁਰਸ਼ਰਨ ਸਿੰਘ ਖਾਲਸਾ<gursharnsinghkhalsa@yahoo.com>"
-"ਜਸਵਿੰਦਰ ਸਿੰਘ ਫੂਲੇਵਾਲਾ<jaswinderlinux@netscape.net>"
+"ਅਮਨਪ੍ਰੀਤ ਸਿੰਘ ਆਲਮ <amanlinux@netscape.net> ਗੁਰਸ਼ਰਨ ਸਿੰਘ "
+"ਖਾਲਸਾ<gursharnsinghkhalsa@yahoo.com>ਜਸਵਿੰਦਰ ਸਿੰਘ "
+"ਫੂਲੇਵਾਲਾ<jaswinderlinux@netscape.net>"
 
 #: src/yelp-window.c:1310
 msgid "A Help Browser for GNOME"
@@ -667,4 +668,3 @@ msgstr "ਗਨੋਮ ਨਾਲ ਸਹਾਇਤਾ ਲਵੋ"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "ਸਹਾਇਤਾ"
-
