Corrected typo which caused "parser error : xmlParseEntityRef: no name"

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-08-31  J.H.M. Dassen (Ray) <jdassen@debian.org>
+
+	* ga.po: Corrected typo which caused "parser error : xmlParseEntityRef:
+	no name".
+
 2004-08-28  Laszlo Dvornik  <dvornik@gnome.hu>
 
 	* hu.po: Updated Hungarian translation.
