--- a/po/ga.po
+++ b/po/ga.po
@@ -409,7 +409,7 @@ msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr "&8221;"
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Article"
