Updated Slovak translation by Ivan Noris.
2004-09-02  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>

        * sk.po: Updated Slovak translation by Ivan Noris.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-09-02  Stanislav Visnovsky <visnovsky@nenya.ms.mff.cuni.cz>
+
+	* sk.po: Updated Slovak translation by Ivan Noris.
+
 2004-08-31  J.H.M. Dassen (Ray) <jdassen@debian.org>
 
 	* ga.po: Corrected typo which caused "parser error : xmlParseEntityRef:
