Updated Czech translation.
2004-09-04  Miloslav Trmac  <mitr@volny.cz>

	* cs.po: Updated Czech translation.

--- a/po/cs.po
+++ b/po/cs.po
@@ -9,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Yelp VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-30 23:35-0500\n"
-"PO-Revision-Date: 2004-02-10 20:23+0100\n"
+"POT-Creation-Date: 2004-09-03 12:24+0200\n"
+"PO-Revision-Date: 2004-09-03 17:42+0200\n"
 "Last-Translator: Miloslav Trmac <mitr@volny.cz>\n"
 "Language-Team: Czech <cs@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -292,19 +292,19 @@ msgstr "/Soubor/_Zavřít okno"
 
 #: src/yelp-window.c:257
 msgid "/_Edit"
-msgstr "/Ú_pravy"
+msgstr "/Upravit"
 
 #: src/yelp-window.c:258
 msgid "/Edit/_Find..."
-msgstr "/Úpravy/_Hledat..."
+msgstr "/Upravit/_Hledat..."
 
 #: src/yelp-window.c:261
 msgid "/Edit/Find Ne_xt"
-msgstr "/Úpravy/Hledat _následující"
+msgstr "/Upravit/Hledat _následující"
 
 #: src/yelp-window.c:264
 msgid "/Edit/Find Pre_vious"
-msgstr "/Úpravy/Hledat _předchozí"
+msgstr "/Upravit/Hledat _předchozí"
 
 #: src/yelp-window.c:268
 msgid "/_Go"
