--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-03  Shaun McCance  <shaunm@gnome.org>
+
+	* po/ga.po:
+	- Changed &8221; to &#8221;
+
 2004-08-21  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* configure.in: Added «nb» to ALL_LINGUAS.
