stylesheets/db2html.xsl - Removed; it's generated from db2html.xsl.in
* stylesheets/db2html.xsl
- Removed; it's generated from db2html.xsl.in

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-09-22  Shaun McCance  <shaunm@gnome.org>
+
+	* stylesheets/db2html.xsl
+	- Removed; it's generated from db2html.xsl.in
+
 2004-09-03  Shaun McCance  <shaunm@gnome.org>
 
 	* po/ga.po:
