- Support for info URIs, and some clean-up
* src/yelp-utils.c:
- Support for info URIs, and some clean-up

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-09-28  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-utils.c:
+	- Support for info URIs, and some clean-up
+
+2004-09-28  Shaun McCance  <shaunm@gnome.org>
+
 	* src/Makefile.am:
 	* src/test-uri.c:
 	* src/yelp-utils.c:
