- DIE STRCMP DIE
* src/yelp-man-parser.c:
- DIE STRCMP DIE

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-09-29  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-man-parser.c:
+	- DIE STRCMP DIE
+
+2004-09-29  Shaun McCance  <shaunm@gnome.org>
+
 	* src/Makefile.am:
 	* src/test-uri.c:
 	* src/yelp-utils.c:
