- Fixed compilation problem
* src/yelp-window.c:
- Fixed compilation problem

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2004-10-08  Shaun McCance  <shaunm@gnome.org>
 
+	* src/yelp-window.c:
+	- Fixed compilation problem
+
+2004-10-08  Shaun McCance  <shaunm@gnome.org>
+
 	* src/yelp-utils.c:
 	- A NULL check, and re-enabling the pager unreffing
 
