Translation updated by Aiet Kolkhi.
2004-10-11  Mətin Əmirov  <metin@karegen.com>

	* ka.po: Translation updated by Aiet Kolkhi.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-10-11  Mətin Əmirov  <metin@karegen.com>
+
+	* ka.po: Translation updated by Aiet Kolkhi.
+
 2004-10-10  Vincent van Adrighem  <adrighem@gnome.org>
 
 	* nl.po: Translation updated by Tino Meinen.
