--- a/po/ka.po
+++ b/po/ka.po
@@ -1,11 +1,11 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Georgian translation of yelp.
+# Copyright (C) 2004 Aiet Kolkhi
+# This file is distributed under the same license as the yelp package.
+# Aiet Kolkhi <aiet@qartuli.net>, 2004.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: yelp\n"
+"Project-Id-Version: 0.1\n"
 "POT-Creation-Date: 2004-04-22 13:59+0200\n"
 "PO-Revision-Date: 2004-04-23 01:15+0400\n"
 "Last-Translator: Aiet Kolkhi <aiet@qartuli.net>\n"
