--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Changes in 2.6.4:
+-----------------
+* Updated translations:
+  gl      (Jesus Bravo Alvarez)
+  zh_TW   (GNOME HK Team)
+
 Changes in 2.6.3:
 -----------------
 * Updated translations:
