--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-10-11  Shaun McCance  <shaunm@gnome.org>
+
+	* NEWS:
+	* configure.in:
+	* */af.po:
+	- Version 2.6.4
+
 2004-09-13  Shaun McCance  <shaunm@gnome.org>
 
 	* NEWS:
