--- a/po/ta.po
+++ b/po/ta.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ta\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-08-30 23:35-0500\n"
+"POT-Creation-Date: 2004-10-11 23:54-0500\n"
 "PO-Revision-Date: 2004-10-08 18:37+0530\n"
 "Last-Translator: Jayaradha N <jaya@pune.redhat.com>\n"
 "Language-Team: Tamil <zhakanini@yahoogroups.com>\n"
@@ -18,7 +18,8 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.3.1\n"
-"Plural-Forms: Plural-Forms: nplurals=2; plural=(n != 1);\n\n"
+"Plural-Forms: Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"\n"
 "\n"
 
 #: data/toc.xml.in.h:1
@@ -667,4 +668,3 @@ msgstr "கனோமைப் பற்றி உதவி பெறு"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "உதவி"
-
